--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.1.2"
+    "astro": "^4.1.2",
+    "astro-icon": "^1.0.2"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.1.64"
   }
 }
