--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   },
   "dependencies": {
     "astro": "^4.1.2",
-    "astro-icon": "^1.0.2"
+    "astro-icon": "^1.0.2",
+    "@astrojs/rss": "^4.0.5",
+    "@astrojs/mdx": "^2.1.1",
+    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/check": "^0.5.6",
+    "typescript": "^5.3.3"
+
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.64"
