--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "@astrojs/check": "^0.5.6",
     "@astrojs/mdx": "^2.1.1",
-    "@astrojs/rss": "^4.0.12",
-    "@astrojs/sitemap": "^3.1.1",
-    "astro": "^4.1.2",
+    "@astrojs/rss": "4.0.14",
+    "@astrojs/sitemap": "3.6.0",
+    "astro": "4.16.19",
     "astro-icon": "^1.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "5.9.3"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.64"
