--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "5.9.3"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.1.64"
+    "@iconify-json/mdi": "^1.1.64",
+    "prettier": "^3.8.1",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
